--- a/UniG.ipynb
+++ b/UniG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "c3069f1c",
    "metadata": {
     "pycharm": {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -44,7 +44,7 @@
     "import numpy as np\n",
     "\n",
     "# Read the content of 't2.txt' into a NumPy array\n",
-    "with open('t3.txt', 'r') as file:\n",
+    "with open('./data/university_adjacency.txt', 'r') as file:\n",
     "    lines = file.read().splitlines()\n",
     "data = [list(map(int, line.split())) for line in lines]\n",
     "adjacency_matrix = np.array(data)\n",
@@ -237,7 +237,7 @@
    "source": [
     "import numpy as np\n",
     "# Read the content of 'cov1.txt' into a NumPy array\n",
-    "with open('cov1.txt', 'r') as file:\n",
+    "with open('./data/university_metadata.txt', 'r') as file:\n",
     "    lines = file.read().splitlines()\n",
     "data = [list(map(int, line.split())) for line in lines]\n",
     "adjacency_matrix2 = np.array(data)\n",
@@ -343,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt('meta2.txt',matrix_meta,fmt='%.1d')"
+    "np.savetxt('./data/university_bin_meta.txt',matrix_meta,fmt='%.1d')"
    ]
   },
   {
@@ -362,7 +362,7 @@
    ],
    "source": [
     "# Read the attributes from an input file\n",
-    "input_file = \"meta2.txt\"\n",
+    "input_file = './data/university_bin_meta.txt'\n",
     "node_id = 0\n",
     "\n",
     "node_attributes = []\n",
@@ -1581,7 +1581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
